--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 See example.php for usage instructions.
 
 Requires the pecl_http module to be installed.
+
+See http://requesttracker.wikia.com/wiki/REST for information on available fields. 
+Note that if a request type has mandatory fields, they are requested in the function
+call, or (in certain cases) automatically added to the request.  So you don't need
+to specify the ticket id in content, or the type of action.
