--- a/README
+++ b/README
@@ -6,3 +6,5 @@ See http://requesttracker.wikia.com/wiki/REST for information on available field
 Note that if a request type has mandatory fields, they are requested in the function
 call, or (in certain cases) automatically added to the request.  So you don't need
 to specify the ticket id in content, or the type of action.
+
+Please report any issues at https://github.com/dersam/RTPHPLib/issues 
