readme update- current status

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Available as a composer package at http://packagist.org/packages/dersam/rt-php-lib.
 
+Barring release of new Request Tracker features, or issue reports, this library is stable.
+
 See example.php for usage instructions.
 
 Requires curl.
